[#ChocoPacker.Electron] fix-layout: remove font stretch

--- a/ChocoPacker.UI/app/css/main.css
+++ b/ChocoPacker.UI/app/css/main.css
@@ -59,7 +59,6 @@
   min-height: 20px;
   background-color: #2fffb8;
   vertical-align: middle;
-  font-stretch: expanded;
   font-size: 16px;
   line-height: 20px;
 }
